--- a/tournaments/templates/tournaments/form.html
+++ b/tournaments/templates/tournaments/form.html
@@ -68,7 +68,8 @@
                     <img src="{{ campo.value.url }}" alt="{{ campo.label }}" width="50px">
                     {% endif %}
                     <input type="{{ campo.field.widget.input_type }}" class="form-control" id="" name="{{ campo.name }}"
-                        placeholder="{{ campo.label }}" value="{{ campo.value | default:'' }}" accept="image/jpeg, image/png, image/webp">
+                        placeholder="{{ campo.label }}" value="{{ campo.value | default:'' }}"
+                        accept="image/jpeg, image/png, image/webp">
                 </div>
                 {% endif %}
                 {% endfor %}
